<package>
  <name>niryo_one_gazebo</name>
  <version>0.1.0</version>
  <description>niryo_one_gazebo</description>
  <maintainer email="gabriel_wong@mymail.sutd.edu.sg">Gabriel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>niryo_one_control</run_depend>
  <run_depend>niryo_one_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
